src/test/deca/codegen/invalid/result/test_acces_non_init_output.res
  ** IMA ** ERREUR ** Ligne 49 : 
    CMP avec op1 : adresse memoire et op2 : indefini
